release: bump version to 0.16.0